--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "mesh-ui-components": "^0.2.9",
+    "mesh-ui-components": "^0.2.14",
     "nuxt": "^3.1.2"
   },
   "dependencies": {
@@ -19,6 +19,7 @@
     "@as-integrations/h3": "^1.1.5",
     "@nuxtjs/apollo": "^5.0.0-alpha.5",
     "graphql": "^16.6.0",
+    "jose": "^4.13.0",
     "mongoose": "^6.9.1"
   },
   "license": "ISC"
