added prestart script

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
+    "prestart": "nuxt build",
     "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
