--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "license": "ISC",
   "engines": {
-    "npm": "^8.13.2",
-    "node": "^18.6"
+    "npm": "8.13.2",
+    "node": "18.6"
   }
 }
