--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "license": "ISC",
   "engines": {
-    "npm": "8.3.0",
-    "node": "17.3.1"
+    "npm": "^8.3.0",
+    "node": "^17.3.1"
   }
 }
