--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -5,9 +5,9 @@ jobs:
   MoMoPipeline:
     runs-on: ubuntu-latest
     steps:
-      - name: echo 'run unit tests'
-      - name: echo 'run e2e tests'
-      - name: echo 'run lighthouse test'
-      - name: echo 'publish'
+      - run: echo 'run unit tests'
+      - run: echo 'run e2e tests'
+      - run: echo 'run lighthouse test'
+      - run: echo 'publish'
       - run: git push dokku master
       - run: echo 'this job's status is ${{ job.status }}'
