--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "start": "node .output/server/index.mjs"
+    "start": "node .output/server/index.mjs",
+    "test": "vitest"
   },
   "devDependencies": {
+    "@nuxt/test-utils": "^3.2.3",
     "mesh-ui-components": "^0.2.17",
-    "nuxt": "^3.1.2"
+    "nuxt": "^3.1.2",
+    "vitest": "^0.29.2"
   },
   "dependencies": {
     "@apollo/server": "^4.3.3",
@@ -25,7 +28,7 @@
   },
   "license": "ISC",
   "engines": {
-    "npm": "^8.3.0",
-    "node": "^17.3.1"
+    "npm": "^8.13.2",
+    "node": "^18.6.0"
   }
 }
