--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "devDependencies": {
     "@nuxt/test-utils": "^3.2.3",
-    "mesh-ui-components": "^0.2.29",
+    "@vue/test-utils": "^2.3.1",
+    "happy-dom": "^8.9.0",
+    "mesh-ui-components": "^0.3.2",
     "nuxt": "^3.1.2",
     "vitest": "^0.29.2"
   },
