--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@nuxt/test-utils": "^3.2.3",
     "@vue/test-utils": "^2.3.1",
     "happy-dom": "^8.9.0",
-    "mesh-ui-components": "^0.3.5",
+    "mesh-ui-components": "^0.3.6",
     "nuxt": "^3.1.2",
+    "sass": "^1.60.0",
+    "sass-loader": "^13.2.2",
     "vitest": "^0.29.2"
   },
   "dependencies": {
