--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,11 +1,18 @@
 name: Momo deploy
-on: workflow_dispatch
+on: push
 jobs: 
-  firstjob: 
+  deploy: 
     runs-on: ubuntu-latest
     steps: 
-      - name: Print greeting
-        run: | 
-          echo "Hello world"
-          echo "Done - bye!"
+      - name: Get code
+        uses: actions/checkout@v4
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.4.0'
+          architecture: 'aarch64'
+      - name: Install dependencies
+        run: npm ci
+      - name: Test
+        run: npm test
         
