--- a/package.json
+++ b/package.json
@@ -33,9 +33,5 @@
     "mongoose": "^6.9.1",
     "pinia": "^2.0.33"
   },
-  "license": "ISC",
-  "engines": {
-    "npm": "^8.13.2",
-    "node": "^18.6.0"
-  }
+  "license": "ISC"
 }
