--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          architecture: 'aarch64'
+          architecture: 'x64'
       - name: Install dependencies
         run: npm ci
       - name: Test
