try self hosted runner on pi

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -2,7 +2,7 @@ name: Momo deploy
 on: push
 jobs: 
   deploy: 
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps: 
       - name: Get code
         uses: actions/checkout@v4
