--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -5,7 +5,7 @@ on:
       - master
 jobs: 
   deploy: 
-    runs-on: [self-hosted, pi]
+    runs-on: self-hosted
     steps: 
       - name: Get code
         uses: actions/checkout@v4
